force-app/main/default/objects/CausationParty__c/CausationParty__c.object-meta.xml
<CustomObject>
    <label>Causation Party</label>
    <nameField>
        <displayFormat>CAP-{00000}</displayFormat>
        <label>Causation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Causation Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>