force-app/main/default/objects/CausationParty__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer/debtor whose purchases count — resolved via the SAP customer number. May stay empty if the number cannot (yet) be matched to an account. [Sources: D-02]</description>
    <inlineHelpText>The customer/debtor whose purchases count — resolved via the SAP customer number. May stay empty if the number cannot (yet) be matched to an account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Causation Parties</relationshipLabel>
    <relationshipName>CausationParties</relationshipName>
    <type>Lookup</type>
</CustomField>