force-app/main/default/objects/CausationParty__c/fields/CausationLevel__c.field-meta.xml
<CustomField>
    <fullName>CausationLevel__c</fullName>
    <description>At which level this causation party counts: whole customer hierarchy, single object or country filter. [Sources: D-02, MN-003 Z.451-497]</description>
    <inlineHelpText>At which level this causation party counts: whole customer hierarchy, single object or country filter.</inlineHelpText>
    <label>Causation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>