force-app/main/default/objects/CausationParty__c/fields/ContractPosition__c.field-meta.xml
<CustomField>
    <fullName>ContractPosition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only set when the causation party applies to a single agreement (SAP agreement level) instead of the whole contract. [Sources: D-02]</description>
    <inlineHelpText>Only set when the causation party applies to a single agreement (SAP agreement level) instead of the whole contract.</inlineHelpText>
    <label>Contract Position</label>
    <referenceTo>ContractPosition__c</referenceTo>
    <relationshipLabel>Causation Parties</relationshipLabel>
    <relationshipName>CausationParties</relationshipName>
    <type>Lookup</type>
</CustomField>