force-app/main/default/objects/CausationParty__c/fields/CustomerContract__c.field-meta.xml
<CustomField>
    <fullName>CustomerContract__c</fullName>
    <description>The contract this causation party counts for. Causation rows live and die with the contract. [Sources: D-02]</description>
    <inlineHelpText>The contract this causation party counts for. Causation rows live and die with the contract.</inlineHelpText>
    <label>Customer Contract</label>
    <referenceTo>CustomerContract__c</referenceTo>
    <relationshipLabel>Causation Parties</relationshipLabel>
    <relationshipName>CausationParties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>