force-app/main/default/objects/CausationParty__c/fields/ERPAgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPAgreementNumber__c</fullName>
    <description>Grouping/capsule key: filled = this causation party applies to exactly this SAP agreement; empty = it applies to the whole contract. The causation circle is a capsule per agreement. [Sources: K-6 2026-08-11, RV-Kapsel-Prinzip]</description>
    <inlineHelpText>Grouping/capsule key: filled = this causation party applies to exactly this SAP agreement; empty = it applies to the whole contract. The causation circle is a capsule per agreement.</inlineHelpText>
    <label>ERP Agreement Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>