force-app/main/default/objects/CausationParty__c/fields/ERPCausationKey__c.field-meta.xml
<CustomField>
    <fullName>ERPCausationKey__c</fullName>
    <description>Technical upsert key of the causation row — so the nightly sync finds rows reliably. [Sources: D-02, D-01-Prinzip]</description>
    <externalId>true</externalId>
    <inlineHelpText>Technical upsert key of the causation row — so the nightly sync finds rows reliably.</inlineHelpText>
    <label>ERP Causation Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>