force-app/main/default/objects/CausationParty__c/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>The SAP customer number of the causation party as delivered by the interface — preserved even when no account could be matched. [Sources: D-02]</description>
    <inlineHelpText>The SAP customer number of the causation party as delivered by the interface — preserved even when no account could be matched.</inlineHelpText>
    <label>ERP Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>