force-app/main/default/objects/CausationParty__c/fields/ERPReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPReferenceNumber__c</fullName>
    <description>The reference number of the SAP causation row — for queries and reconciliation with SAP. [Sources: K-6 2026-08-11]</description>
    <inlineHelpText>The reference number of the SAP causation row — for queries and reconciliation with SAP.</inlineHelpText>
    <label>ERP Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>