force-app/main/default/objects/CausationParty__c/fields/Excluded__c.field-meta.xml
<CustomField>
    <fullName>Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This causation party is excluded from the calculation (e.g. removing individual chain members). [Sources: D-02, MN-003 Z.452-464]</description>
    <inlineHelpText>This causation party is excluded from the calculation (e.g. removing individual chain members).</inlineHelpText>
    <label>Excluded</label>
    <type>Checkbox</type>
</CustomField>