force-app/main/default/objects/CausationParty__c/fields/PartyType__c.field-meta.xml
<CustomField>
    <fullName>PartyType__c</fullName>
    <description>Which kind of party this causation row carries: customer (whole hierarchy counts), object (only this single business partner), publisher (available in SAP, not maintained per docs) or supplier (not relevant per docs). [Sources: K-6 2026-08-11]</description>
    <inlineHelpText>Which kind of party this causation row carries: customer (whole hierarchy counts), object (only this single business partner), publisher (available in SAP, not maintained per docs) or supplier (not relevant per docs).</inlineHelpText>
    <label>Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <label>Customer (Kunde)</label>
            </value>
            <value>
                <fullName>Object</fullName>
                <label>Object (Objekt)</label>
            </value>
            <value>
                <fullName>Publisher</fullName>
                <label>Publisher (Verleger)</label>
            </value>
            <value>
                <fullName>Supplier</fullName>
                <label>Supplier (Lieferant)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>