force-app/main/default/objects/CausationParty__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>From when this causation party counts. [Sources: D-02]</description>
    <inlineHelpText>From when this causation party counts.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>