force-app/main/default/objects/CausationParty__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Until when this causation party counts. [Sources: D-02]</description>
    <inlineHelpText>Until when this causation party counts.</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>