force-app/main/default/objects/CausationParty__c/listViews/All_Causation_Parties.listView-meta.xml
<ListView>
    <fullName>All_Causation_Parties</fullName>
    <columns>NAME</columns>
    <columns>CustomerContract__c</columns>
    <columns>Account__c</columns>
    <columns>ERPCustomerNumber__c</columns>
    <columns>CausationLevel__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>ValidTo__c</columns>
    <columns>Excluded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Causation Parties</label>
</ListView>